# homeassistant-guesty

./: .grype.yaml  .pre-commit-config.yaml  AGENTS.md  README.md  REUSE.toml  hacs.json  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: speckit.clarify.agent.md  speckit.plan.agent.md  speckit.specify.agent.md
.github/workflows/: autolabeler.yaml  build-test.yaml  release-drafter.yaml  release.yaml  semantic-pull-request.yaml  validate.yaml
.specify/: init-options.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
LICENSES/: CC-BY-SA-4.0.txt
custom_components/guesty/: __init__.py  actions.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  notify.py  sensor.py  services.yaml  strings.json
specs/001-auth-config-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-listings-properties/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-reservations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-custom-variables/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-notify-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-automation-actions/: data-model.md  plan.md  spec.md  (+3 more)
tests/: __init__.py  conftest.py  test_actions.py  test_config_flow.py  test_coordinator.py  test_custom_field_service.py  test_init.py  test_notify.py  test_reservation_sensor.py  test_sensor.py  test_token_persistence.py
(+39 files in other folders)
