# SPDX-FileCopyrightText: 2026 Andrew Grimberg <tykeal@bardicgrove.org>
# SPDX-License-Identifier: Apache-2.0

[project]
name = "guesty"
version = "0.0.0"
description = "Guesty integration for Home Assistant"
requires-python = ">=3.13.2"
license = { text = "Apache-2.0" }

[dependency-groups]
dev = [
    "homeassistant>=2026.2.0,<2026.3.0",
    "httpx>=0.28",
    "interrogate>=1.7",
    "mypy>=1.20",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "respx>=0.22",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.interrogate]
fail-under = 100
verbose = 2
